<resources>
    <string name="app_name">JVC Forums Reader</string>
    <string name="loginPseudo">Login :</string>
    <string name="loginLogin">Connect</string>
    <string name="loginPassword">Password :</string>
    <string name="chooseRememberLogin">Remember login</string>
    <string name="chooseRememberPassword">Remember password</string>
    <string name="chooseAutoConnect">Auto connect</string>
    <string name="incorrectLoginOrPasswordFormatting">Login or password badly formatted (too short, too long or contains denied characters)</string>
    <string name="connectingMessage">Connecting...</string>
    <string name="mainMenuForumListItem">Forum list</string>
    <string name="mainMenuPMItem">Private messages</string>
    <string name="mainMenuDisconnectItem">Disconnect</string>
    <string name="mainMenuTopForumsItem">&quot;Forums' top 15&quot;</string>
    <string name="mainMenuSearchForumItem">&quot;Search a game's forum&quot;</string>
    <string name="errorWhileCheckingPM">Error while checking PMs</string>
    <string name="connectWaitingCancel">Cancel</string>
    <string name="connectWaitingBack">Back</string>
    <string name="errorWhileConnecting">Error while connecting</string>
    <string name="errorUnknownJVCOperationId">Error : unknown JVC operation ID</string>
    <string name="errorBadLoginOrPassword">Error : bad login or password</string>
    <string name="errorFromJvc">Error from JVC</string>
    <string name="loaderImageViewLoading">(loading)</string>
    <string name="loaderImageViewError">(error)</string>
    <string name="captchaButtonReload">Reload</string>
    <string name="captchaButtonSubmit">Submit</string>
    <string name="captchaTextView">Please enter the captcha :</string>
    <string name="errorWithCaptchaData">Error while processing captcha data</string>
    <string name="mainMenuActiveTopicsItem">Updated topics</string>
    <string name="mainMenuFavTopicsItem">Favorite topics</string>
    <string name="mainMenuSearchForumJVItem">Search a ForumJV</string>
    <string name="mainMenuFavForumsItem">Favorite forums</string>
    <string name="mainMenuPreferencesItem">Preferences</string>
    <string name="errorWhileRetrievingCookies">Error while retrieving cookies</string>
    <string name="errorWhileLoadingTopicList">Error while loading topic list</string>
    <string name="genericLoading">Loading...</string>
    <string name="genericRefresh">Refresh</string>
    <string name="addToFavoriteForums">Add to favorite forums</string>
    <string name="removeFromFavoriteForums">Remove from favorite forums</string>
    <string name="genericSearch">Search</string>
    <string name="searchTopics">Search...</string>
    <string name="genericStop">Stop</string>
    <string name="radioButtonSubject">Topic</string>
    <string name="radioButtonAuthor">Pseudo</string>
    <string name="radioButtonMessage">Post</string>
    <string name="genericStart">{*} Start</string>
    <string name="genericPrevious">{*} Previous</string>
    <string name="genericNext">Next {*}</string>
    <string name="connectingAt">Connecting at</string>
    <string name="badCaptchaFormatting">Captcha is composed of 4 numbers.</string>
    <string name="errorWhileLoadingUserPreferences">Error while loading user preferences</string>
    <string name="noFavoriteForums">No favorite forums</string>
    <string name="errorWhileLoadingTopic">Error while loading topic</string>
    <string name="addToFavoriteTopics">Add to favorite topics</string>
    <string name="removeFromFavoriteTopics">Remove from favorite topics</string>
    <string name="addToUpdatedTopics">Add to updated topics</string>
    <string name="removeFromUpdatedTopics">Remove from updated topics</string>
    <string name="switchToManualBrowsing">Manual browsing</string>
    <string name="switchToAutomaticBrowsing">Automatic browsing</string>
    <string name="noFavoriteTopics">No favorite topics</string>
    <string name="topicGoToPage">Go to page...</string>
    <string name="badPageSelection" formatted="false">Page number must be between %d and %d.</string>
    <string name="genericAnswer">Answer</string>
    <string name="postNotFound">Post n°%d not found.</string>
    <string name="topicLocked">Topic locked</string>
    <string name="previewPost">Preview post</string>
    <string name="genericSend">Send</string>
    <string name="postFromMobile">Post \"from mobile\"</string>
    <string name="smileys">Smileys...</string>
    <string name="genericCancel">Cancel</string>
    <string name="disconnectingMessage">Disconnecting...</string>
    <string name="disconnectingFrom">Disconnecting from</string>
    <string name="prefsUpdatedTopicsCheckDelay">Updated topics check delay</string>
    <string name="prefsCheckUpdatedTopics">Check updated topics automatically</string>
    <string name="prefsCheckPrivateMessages">Check private messages automatically</string>
    <string name="prefsPrivateMessagesCheckDelay">Private messages check delay</string>
    <string name="forumsNavigation">"FORUMS' NAVIGATION"</string>
    <string name="prefsShowSmileysInTopicTitles">Show smileys in topic titles</string>
    <string name="prefsAutomaticBrowsingCheckDelay">&quot;Automatic browsing's posts reload delay&quot;</string>
    <string name="pleaseRetryPostMessage">"Please retry in a few seconds : required data to send the post haven't been extracted yet."</string>
    <string name="genericSending">Sending</string>
    <string name="publishingPost">Publishing post...</string>
    <string name="formExpiryRetry">The form has expired. Re-publishing...</string>
    <string name="cannotExtractData">Cannot extract data</string>
    <string name="topicSubject">Subject :</string>
    <string name="postEmpty">The content of the post is empty.</string>
    <string name="subjectEmpty">The subject is empty.</string>
    <string name="publishingTopic">Publishing topic...</string>
    <string name="prefsReceiveNotificationOnTopicUpdated">Receive notification when a new post gets published</string>
    <string name="prefsReceiveNotificationOnPrivateMessage">Receive notification when you have a new message</string>
    <string name="preferencesHaveBeenUpdated">Preferences have been updated.</string>
    <string name="previewTopic">Preview topic</string>
    <string name="genericCreate">Create</string>
    <string name="errorWhileSearchingForums">Error while searching forums</string>
    <string name="notificationNewPMShort">[JVC] 1 new PM</string>
    <string name="notificationNewPMShortPlural">[JVC] %d new PMs</string>
    <string name="notificationNewPMLong">1 unread message</string>
    <string name="notificationNewPMLongPlural">%d unread messages</string>
    <string name="optionsMenuFirstPage">First page</string>
    <string name="optionsMenuPreviousPage">Previous page</string>
    <string name="optionsMenuNextPage">Next page</string>
    <string name="optionsMenuLastPage">Last page</string>
    <string name="optionsMenuCheckPrivateMessages">Check private messages</string>
    <string name="optionsMenuCheckUpdatedTopics">Check updated topics</string>
    <string name="contextMenuShowProfile">"Show user's profile"</string>
    <string name="contextMenuQuoteAuthor">Quote pseudo</string>
    <string name="contextMenuQuotePost">Quote post content</string>
    <string name="contextMenuIgnorePseudo">Ignore this pseudo</string>
    <string name="contextMenuStopIgnorePseudo">Stop ignoring the pseudo</string>
    <string name="contextMenuWarnAdmin">Warn an administrator</string>
    <string name="contextMenuPostHeader">Post of %s</string>
    <string name="creatingTopicsAndPosts">PUBLISHING TOPICS &amp; POSTS</string>
    <string name="prefsPostAsMobileByDefault">Post \&quot;from mobile\&quot; by default</string>
    <string name="transitivePreviousPage">Previous page</string>
    <string name="transitiveNextPage">Next page</string>
    <string name="transitiveFirstPage">First page</string>
    <string name="transitiveLastPage">Last page</string>
    <string name="fetchingForum">Fetching forum...</string>
    <string name="errorWhileFetchingForum">Error while fetching forum</string>
    <string name="zeroGamesFound">No games were found.</string>
    <string name="contextMenuCopyPermanentLink">Copy permanent link</string>
    <string name="permanentLinkCopied">Permanent link has been copied to the clipboard.</string>
    <string name="errorWhileLoadingCDV">Error while loading profile page</string>
    <string name="errorNoSuchPseudo">This pseudo does not exist.</string>
    <string name="sendPmButton">Send PM</string>
    <string name="errorWhileParsing">Error while parsing.</string>
    <string name="cdvPortletInfosAge">Age</string>
    <string name="cdvPortletInfosCountry">Country</string>
    <string name="cdvPortletInfosMemberSince">Member since</string>
    <string name="cdvPortletInfosLastSeen">Last seen</string>
    <string name="errorPortletNotHandled">[Error] Portlet not handled.</string>
    <string name="cdvButtonProfile">Profile</string>
    <string name="cdvButtonPrefs">Favorites</string>
    <string name="cdvButtonContributions">Contributions</string>
    <string name="ddbDialogTitle">Warn an administrator</string>
    <string name="errorWhileLoading">Error while loading</string>
    <string name="chooseDdbReason">Please choose a reason :</string>
    <string name="genericSubmit">Submit</string>
    <string name="prefsPseudoBlacklistItem">Edit ignored pseudos</string>
    <string name="ignoredPseudos">Ignored pseudos</string>
    <string name="genericRemoveEverything">Remove all</string>
    <string name="pseudoBlacklistAddPseudo">Add pseudo</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="blacklistDialogConfirmPseudo">Do you want to delete %s from ignored pseudos ?</string>
    <string name="incorrectPseudoFormatting">Incorrect pseudo formatting.</string>
    <string name="signatureEnableCheckBox">Use a signature</string>
    <string name="signatureAppendAtStart">Append before the post</string>
    <string name="signatureAppendAtEnd">Append after the post</string>
    <string name="signatureIncludeByDefault">Check \&quot;include signature\&quot; by default</string>
    <string name="signaturePreview">Preview signature</string>
    <string name="includeSignature">Include signature</string>
    <string name="genericRemove">Remove</string>
    <string name="optionsMenuTickAll">Tick all</string>
    <string name="optionsMenuUntickAll">Untick all</string>
    <string name="pmNewRecipient">Recipient(s) :</string>
    <string name="pmNewSubject">"Message's subject :"</string>
    <string name="pmNewWriteYourMessage">Write your message :</string>
    <string name="pmNewAddRecipient">Add pseudo...</string>
    <string name="markAsRead">Mark as read</string>
    <string name="updatedTopicsTopicEditingViewStopEditingTopics">Stop editing topics</string>
    <string name="searchMyTopics">Search my topics</string>
    <string name="contextMenuDeletePost">Delete post</string>
    <string name="contextMenuKickPseudo">Kick pseudo</string>
    <string name="optionsMenuSeeKickInterface">See kick interface</string>
    <string name="prefsSignatureSeparator">CONFIGURE SIGNATURE</string>
    <string name="optionsMenuLockTopic">Lock topic</string>
    <string name="optionsMenuPinTopic">Pin topic</string>
    <string name="answerSeparator">ANSWER</string>
    <string name="contextMenuCopyPost">Copy post content</string>
    <string name="optionsMenuCopyForumLink">Copy forum link</string>
    <string name="optionsMenuCopyTopicLink">Copy topic link</string>
    <string name="optionsMenuArchiveTopic">Archive this topic</string>
    <string name="goToForum">Go to forum</string>
    <string name="ddbExplication">Remarks (200 characters max) :</string>
    <string name="ddbLoadingReasons">Loading reasons...</string>
</resources>