<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/pmNewSenderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                

	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:layout_marginBottom="5dp"
	            android:gravity="center"
	            android:text="@string/pmNewRecipient"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textColor="@color/jvcAdminPseudo" />
	        
	        <Button
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp"
	            android:onClick="pmNewAddRecipientButtonClick"
	            android:text="@string/pmNewAddRecipient" />
	        
	   	</LinearLayout>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp" >

            <LinearLayout
                android:id="@+id/pmNewRecipientListLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
            </LinearLayout>
        </HorizontalScrollView>




        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/pmNewSubject"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/jvcAdminPseudo" />




        <EditText
            android:id="@+id/pmNewSubjectEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:maxLength="100"
            android:inputType="textShortMessage|textCapSentences"
            android:textSize="14sp"
            android:typeface="sans" >

            <requestFocus />
        </EditText>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/pmNewWriteYourMessage"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/jvcAdminPseudo" />



        <EditText
            android:id="@+id/pmNewContentEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="120dp"
            android:layout_marginBottom="5dp"
            android:gravity="top"
            android:inputType="textMultiLine|textCapSentences"
            android:textSize="14sp"
            android:typeface="sans" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >




            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/postFromMobile" />




            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:onClick="pmNewSmileysButtonClick"
                android:text="@string/smileys" />

        </LinearLayout>




        <CheckBox
            android:id="@+id/pmNewIncludeSignatureCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/includeSignature" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >


            <Button
                android:onClick="pmNewPreviewButtonClick"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/previewPost" />


            <Button
                android:onClick="pmNewSendButtonClick"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sendPmButton" />

        </LinearLayout>
        
    </LinearLayout>
    
</ScrollView>