<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:padding="10dp">
        <TextView android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/ddbDialogTitle" android:layout_width="wrap_content"/>
        <TextView android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_marginTop="10dp" android:id="@+id/textView" android:text="@string/ddbLoadingReasons" android:layout_width="wrap_content"/>
        <RadioGroup android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:id="@+id/radioGroup" android:visibility="gone"/>
        <TextView android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_marginTop="10dp" android:id="@+id/remarksTextView" android:text="@string/ddbExplication" android:layout_width="wrap_content" android:visibility="gone"/>
        <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:inputType="textMultiLine|textCapSentences"
                  android:textSize="14sp"
                  android:typeface="sans"
                  android:layout_marginTop="5dp"
                  android:visibility="gone"
                  android:id="@+id/editText"/>
        <Button android:layout_height="wrap_content" android:visibility="gone" android:id="@+id/button" android:text="@string/genericSubmit" android:layout_width="match_parent" android:layout_marginTop="10dp"/>
    </LinearLayout>
</ScrollView>