<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     		xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:paddingTop="8dp">

         <LinearLayout
             android:id="@+id/updatedTopicsLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:paddingLeft="4dp"
	    	android:paddingRight="4dp">
         </LinearLayout>
     </ScrollView>

     <LinearLayout
         android:id="@+id/updatedTopicsTopicEditingView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/lightGrey"
         android:orientation="vertical"
         android:paddingTop="5dp" >

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >

             <Button
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/optionsMenuTickAll" android:onClick="updatedTopicsTickAllButtonClick"/>

             <Button
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/optionsMenuUntickAll" android:onClick="updatedTopicsUntickAllButtonClick"/>

         </LinearLayout>

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >

             <Button
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/markAsRead" android:onClick="updatedTopicsMarkAsReadButtonClick"/>

             <Button
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/genericRemove" android:onClick="updatedTopicsRemoveButtonClick"/>

         </LinearLayout>

         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/updatedTopicsTopicEditingViewStopEditingTopics" android:onClick="updatedTopicsStopEditingTopicsButtonClick"/>

     </LinearLayout>
</LinearLayout>