<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_height="match_parent" android:layout_width="match_parent">
     <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:background="@drawable/cdv_box" android:padding="6dp">
         <TextView android:textSize="18sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" android:id="@+id/cdvHeaderPseudoTextView" android:layout_gravity="center_vertical"></TextView>
         <View android:layout_width="1px" android:background="?android:attr/listDivider" android:layout_height="match_parent" android:layout_marginRight="5dp" android:layout_marginLeft="5dp"></View>
         <ImageView android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/cdvHeaderRankImageView"></ImageView>
         <View android:layout_width="1px" android:background="?android:attr/listDivider" android:layout_height="match_parent" android:layout_marginRight="5dp" android:layout_marginLeft="5dp"></View>
         <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/cdvHeaderSendPmButton" android:layout_gravity="center_vertical" android:text="@string/sendPmButton"></Button>
     </LinearLayout>
     <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:gravity="center" android:layout_marginTop="10dp">
         <Button android:layout_height="wrap_content" android:id="@+id/cdvHeaderProfileButton" android:text="@string/cdvButtonProfile" android:layout_weight="1" android:layout_width="0dp"></Button>
         <Button android:layout_height="wrap_content" android:id="@+id/cdvHeaderPrefsButton" android:text="@string/cdvButtonPrefs" android:layout_weight="1" android:layout_width="0dp"></Button>
         <Button android:layout_height="wrap_content" android:id="@+id/cdvHeaderContributionsButton" android:text="@string/cdvButtonContributions" android:layout_weight="1" android:layout_width="0dp"></Button>
     </LinearLayout>
</LinearLayout>
